updated jupyter notebook

--- a/notebooks/SwissHouseRSlaTank.ipynb
+++ b/notebooks/SwissHouseRSlaTank.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -69,6 +69,210 @@
     "outputs = env.get_outputs_names()\n",
     "print(\"inputs:\", inputs)\n",
     "print(\"outputs:\", outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tanSH.indTanHex.hAPipIns[1].temperatureDependent',\n",
+       " 'tanSH.indTanHex.hAPipIns[2].temperatureDependent',\n",
+       " 'tanSH.indTanHex.hAPipIns[3].temperatureDependent',\n",
+       " 'tanSH.indTanHex.hAPipIns[4].temperatureDependent',\n",
+       " 'tanSH.indTanHex.hAPipIns[5].temperatureDependent',\n",
+       " 'tanSH.indTanHex.hAPipIns[6].temperatureDependent',\n",
+       " 'tanSH.indTanHex.hA_temperatureDependent',\n",
+       " 'tanSH.indTanHex.temSenHex[1].T',\n",
+       " 'tanSH.indTanHex.temSenHex[1].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenHex[1].port.T',\n",
+       " 'tanSH.indTanHex.temSenHex[2].T',\n",
+       " 'tanSH.indTanHex.temSenHex[2].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenHex[2].port.T',\n",
+       " 'tanSH.indTanHex.temSenHex[3].T',\n",
+       " 'tanSH.indTanHex.temSenHex[3].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenHex[3].port.T',\n",
+       " 'tanSH.indTanHex.temSenHex[4].T',\n",
+       " 'tanSH.indTanHex.temSenHex[4].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenHex[4].port.T',\n",
+       " 'tanSH.indTanHex.temSenHex[5].T',\n",
+       " 'tanSH.indTanHex.temSenHex[5].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenHex[5].port.T',\n",
+       " 'tanSH.indTanHex.temSenHex[6].T',\n",
+       " 'tanSH.indTanHex.temSenHex[6].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenHex[6].port.T',\n",
+       " 'tanSH.indTanHex.temSenSur[1].T',\n",
+       " 'tanSH.indTanHex.temSenSur[1].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenSur[1].port.T',\n",
+       " 'tanSH.indTanHex.temSenSur[2].T',\n",
+       " 'tanSH.indTanHex.temSenSur[2].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenSur[2].port.T',\n",
+       " 'tanSH.indTanHex.temSenSur[3].T',\n",
+       " 'tanSH.indTanHex.temSenSur[3].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenSur[3].port.T',\n",
+       " 'tanSH.indTanHex.temSenSur[4].T',\n",
+       " 'tanSH.indTanHex.temSenSur[4].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenSur[4].port.T',\n",
+       " 'tanSH.indTanHex.temSenSur[5].T',\n",
+       " 'tanSH.indTanHex.temSenSur[5].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenSur[5].port.T',\n",
+       " 'tanSH.indTanHex.temSenSur[6].T',\n",
+       " 'tanSH.indTanHex.temSenSur[6].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenSur[6].port.T',\n",
+       " 'tanSH.indTanHex.temSenWat[1].T',\n",
+       " 'tanSH.indTanHex.temSenWat[1].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenWat[1].port.T',\n",
+       " 'tanSH.indTanHex.temSenWat[2].T',\n",
+       " 'tanSH.indTanHex.temSenWat[2].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenWat[2].port.T',\n",
+       " 'tanSH.indTanHex.temSenWat[3].T',\n",
+       " 'tanSH.indTanHex.temSenWat[3].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenWat[3].port.T',\n",
+       " 'tanSH.indTanHex.temSenWat[4].T',\n",
+       " 'tanSH.indTanHex.temSenWat[4].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenWat[4].port.T',\n",
+       " 'tanSH.indTanHex.temSenWat[5].T',\n",
+       " 'tanSH.indTanHex.temSenWat[5].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenWat[5].port.T',\n",
+       " 'tanSH.indTanHex.temSenWat[6].T',\n",
+       " 'tanSH.indTanHex.temSenWat[6].port.Q_flow',\n",
+       " 'tanSH.indTanHex.temSenWat[6].port.T',\n",
+       " 'temHP',\n",
+       " 'temHP2Hex.T',\n",
+       " 'der(temHP2Hex.T)',\n",
+       " 'temHP2Hex.TAmb',\n",
+       " 'temHP2Hex.TMed',\n",
+       " 'temHP2Hex.T_a_inflow',\n",
+       " 'temHP2Hex.T_b_inflow',\n",
+       " 'temHP2Hex.T_start',\n",
+       " 'temHP2Hex.allowFlowReversal',\n",
+       " 'temHP2Hex.dynamic',\n",
+       " 'temHP2Hex.initType',\n",
+       " 'temHP2Hex.k',\n",
+       " 'temHP2Hex.mNor_flow',\n",
+       " 'temHP2Hex.m_flow_nominal',\n",
+       " 'temHP2Hex.m_flow_small',\n",
+       " 'temHP2Hex.port_a.h_outflow',\n",
+       " 'temHP2Hex.port_a.m_flow',\n",
+       " 'temHP2Hex.port_a.p',\n",
+       " 'temHP2Hex.port_b.h_outflow',\n",
+       " 'temHP2Hex.port_b.m_flow',\n",
+       " 'temHP2Hex.port_b.p',\n",
+       " 'temHP2Hex.ratTau',\n",
+       " 'temHP2Hex.tau',\n",
+       " 'temHP2Hex.tauHeaTra',\n",
+       " 'temHP2Hex.tauHeaTraInv',\n",
+       " 'temHP2Hex.tauInv',\n",
+       " 'temHP2Hex.transferHeat',\n",
+       " 'temHex2HP.T',\n",
+       " 'der(temHex2HP.T)',\n",
+       " 'temHex2HP.TAmb',\n",
+       " 'temHex2HP.TMed',\n",
+       " 'temHex2HP.T_a_inflow',\n",
+       " 'temHex2HP.T_b_inflow',\n",
+       " 'temHex2HP.T_start',\n",
+       " 'temHex2HP.allowFlowReversal',\n",
+       " 'temHex2HP.dynamic',\n",
+       " 'temHex2HP.initType',\n",
+       " 'temHex2HP.k',\n",
+       " 'temHex2HP.mNor_flow',\n",
+       " 'temHex2HP.m_flow_nominal',\n",
+       " 'temHex2HP.m_flow_small',\n",
+       " 'temHex2HP.port_a.h_outflow',\n",
+       " 'temHex2HP.port_a.m_flow',\n",
+       " 'temHex2HP.port_a.p',\n",
+       " 'temHex2HP.port_b.h_outflow',\n",
+       " 'temHex2HP.port_b.m_flow',\n",
+       " 'temHex2HP.port_b.p',\n",
+       " 'temHex2HP.ratTau',\n",
+       " 'temHex2HP.tau',\n",
+       " 'temHex2HP.tauHeaTra',\n",
+       " 'temHex2HP.tauHeaTraInv',\n",
+       " 'temHex2HP.tauInv',\n",
+       " 'temHex2HP.transferHeat',\n",
+       " 'temRoo.T',\n",
+       " 'temRoo.port.Q_flow',\n",
+       " 'temRoo.port.T',\n",
+       " 'temRoom',\n",
+       " 'temSla2Tan.T',\n",
+       " 'der(temSla2Tan.T)',\n",
+       " 'temSla2Tan.TAmb',\n",
+       " 'temSla2Tan.TMed',\n",
+       " 'temSla2Tan.T_a_inflow',\n",
+       " 'temSla2Tan.T_b_inflow',\n",
+       " 'temSla2Tan.T_start',\n",
+       " 'temSla2Tan.allowFlowReversal',\n",
+       " 'temSla2Tan.dynamic',\n",
+       " 'temSla2Tan.initType',\n",
+       " 'temSla2Tan.k',\n",
+       " 'temSla2Tan.mNor_flow',\n",
+       " 'temSla2Tan.m_flow_nominal',\n",
+       " 'temSla2Tan.m_flow_small',\n",
+       " 'temSla2Tan.port_a.h_outflow',\n",
+       " 'temSla2Tan.port_a.m_flow',\n",
+       " 'temSla2Tan.port_a.p',\n",
+       " 'temSla2Tan.port_b.h_outflow',\n",
+       " 'temSla2Tan.port_b.m_flow',\n",
+       " 'temSla2Tan.port_b.p',\n",
+       " 'temSla2Tan.ratTau',\n",
+       " 'temSla2Tan.tau',\n",
+       " 'temSla2Tan.tauHeaTra',\n",
+       " 'temSla2Tan.tauHeaTraInv',\n",
+       " 'temSla2Tan.tauInv',\n",
+       " 'temSla2Tan.transferHeat',\n",
+       " 'temTan2Sla.T',\n",
+       " 'der(temTan2Sla.T)',\n",
+       " 'temTan2Sla.TAmb',\n",
+       " 'temTan2Sla.TMed',\n",
+       " 'temTan2Sla.T_a_inflow',\n",
+       " 'temTan2Sla.T_b_inflow',\n",
+       " 'temTan2Sla.T_start',\n",
+       " 'temTan2Sla.allowFlowReversal',\n",
+       " 'temTan2Sla.dynamic',\n",
+       " 'temTan2Sla.initType',\n",
+       " 'temTan2Sla.k',\n",
+       " 'temTan2Sla.mNor_flow',\n",
+       " 'temTan2Sla.m_flow_nominal',\n",
+       " 'temTan2Sla.m_flow_small',\n",
+       " 'temTan2Sla.port_a.h_outflow',\n",
+       " 'temTan2Sla.port_a.m_flow',\n",
+       " 'temTan2Sla.port_a.p',\n",
+       " 'temTan2Sla.port_b.h_outflow',\n",
+       " 'temTan2Sla.port_b.m_flow',\n",
+       " 'temTan2Sla.port_b.p',\n",
+       " 'temTan2Sla.ratTau',\n",
+       " 'temTan2Sla.tau',\n",
+       " 'temTan2Sla.tauHeaTra',\n",
+       " 'temTan2Sla.tauHeaTraInv',\n",
+       " 'temTan2Sla.tauInv',\n",
+       " 'temTan2Sla.transferHeat',\n",
+       " 'temp_100',\n",
+       " 'temp_101',\n",
+       " 'temp_87',\n",
+       " 'temp_88',\n",
+       " 'temp_89',\n",
+       " 'temp_90',\n",
+       " 'temp_91',\n",
+       " 'temp_92',\n",
+       " 'temp_93',\n",
+       " 'temp_94',\n",
+       " 'temp_95',\n",
+       " 'temp_96',\n",
+       " 'temp_97',\n",
+       " 'temp_98',\n",
+       " 'temp_99']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ p for p in env.vrs if \"tem\" in p]"
    ]
   },
   {
